--- a/Projects/Playground/Playground.Forms.UI/Pages/RootPage.xaml
+++ b/Projects/Playground/Playground.Forms.UI/Pages/RootPage.xaml
@@ -5,7 +5,8 @@
     xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
     xmlns:mvx="clr-namespace:MvvmCross.Forms.Bindings;assembly=MvvmCross.Forms"
     xmlns:viewModels="clr-namespace:Playground.Core.ViewModels;assembly=Playground.Core"
-    x:Class="Playground.Forms.UI.Pages.RootPage" Title="Root page">
+    x:Class="Playground.Forms.UI.Pages.RootPage" Title="Root page"
+    NavigationPage.HasNavigationBar="True">
 	<ContentPage.Content>
         <ScrollView>
             <StackLayout Margin="10">
