--- a/Projects/Playground/Playground.Uwp/Views/RootView.xaml
+++ b/Projects/Playground/Playground.Uwp/Views/RootView.xaml
@@ -15,5 +15,9 @@
                 Command="{Binding ShowSplitCommand}"
                 Margin="5"
                 Padding="5" />
+        <Button Content="Show Child Using IMvxNavigation"
+                Command="{Binding ShowNavigationChildCommand}"
+                Margin="5"
+                Padding="5" />
     </StackPanel>
 </views:MvxWindowsPage>
