--- a/Projects/Playground/Playground.Uwp/Views/ChildView.xaml
+++ b/Projects/Playground/Playground.Uwp/Views/ChildView.xaml
@@ -25,6 +25,14 @@
                 Command="{Binding NavigationCloseCommand}"
                 Margin="5"
                 Padding="5" />
+            <Button Content="Second using Next"
+                Command="{Binding NextSecondChildCommand}"
+                Margin="5"
+                Padding="5" />
+            <Button Content="Close using Next"
+                Command="{Binding NextCloseCommand}"
+                Margin="5"
+                Padding="5" />
 
         </StackPanel>
         <Frame x:Name="NestedFrame"  Grid.Row="1"/>
